# hsi-downloader

./: .gitignore  AGENTS.md  ANALYSIS.md  CLAUDE.md  Cargo.toml  README.md  index.html  package.json  tsconfig.json  vite.config.ts
.github/workflows/: cli-release.yml  gui-release.yml  rust.yml  ts.yml
docs/superpowers/plans/: 2026-04-01-yushi-gui-redesign-plan.md  2026-04-08-tauri-solidjs-rewrite.md  2026-04-08-tui-gui-parity.md  2026-04-09-bittorrent-integration.md  2026-04-10-add-task-redesign.md
docs/superpowers/specs/: 2026-03-31-tauri-to-gpui-migration-design.md  2026-04-01-yushi-gui-redesign-spec.md  2026-04-08-tauri-solidjs-rewrite-design.md  2026-04-08-tui-gui-parity-design.md  2026-04-09-bittorrent-integration-design.md  2026-04-10-add-task-redesign-design.md
hsi-cli/: Cargo.toml
hsi-cli/src/: cli.rs  config.rs  main.rs  ui.rs
hsi-cli/src/commands/: config.rs  download.rs  queue.rs
hsi-cli/src/tui/: app.rs  theme.rs
hsi-cli/src/tui/widgets/: add_task.rs  dialog.rs  empty_state.rs  filter_tabs.rs  help_bar.rs  history_card.rs  mod.rs  settings_group.rs  sidebar.rs  task_card.rs
hsi-core/: Cargo.toml
hsi-core/src/: config.rs  downloader.rs  error.rs  history.rs  lib.rs  storage.rs  types.rs  utils.rs
src/: App.tsx  TrayApp.tsx  app_state.rs  main.rs  state.rs  svg.d.ts  utils.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  macos-tray.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs  state.rs  tray.rs
src-ui/: index.html  package.json  vite.config.ts
src-ui/src/: App.tsx  TrayApp.tsx  index.tsx
src-ui/src/components/: AddTaskDialog.tsx  ChunkedProgressBar.tsx  FilterTabs.tsx  HistoryCard.tsx  Sidebar.tsx  TaskCard.tsx  ThemeToggle.tsx  TrayTaskItem.tsx
src-ui/src/lib/: commands.ts  events.ts  format.ts  types.ts
src-ui/src/pages/: HistoryPage.tsx  SettingsPage.tsx  TasksPage.tsx
src-ui/src/stores/: config-store.ts  history-store.ts  task-store.ts  theme-store.ts
src-ui/src/styles/: app.css
src/components/: AddTaskDialog.tsx  ChunkedProgressBar.tsx  FilterTabs.tsx  HistoryCard.tsx  TaskCard.tsx  ThemeToggle.tsx  TrayTaskItem.tsx  add_task.rs  content_panel.rs  header.rs  history_card.rs  mod.rs  nav_sidebar.rs  settings_form.rs  summary_row.rs  task_card.rs  task_item.rs
src/lib/: commands.ts  format.ts  progress.test.ts  progress.ts  types.ts
src/pages/: HistoryPage.tsx  SettingsPage.tsx  TasksPage.tsx
src/stores/: config-store.ts  task-store.ts
src/styles/: app.css
src/views/: app_view.rs  dialogs.rs  history.rs  history_page.rs  layout.rs  mod.rs  settings.rs  settings_page.rs  task_list.rs  tasks_page.rs
yushi-cli/: Cargo.toml
yushi-cli/src/: cli.rs  config.rs  ui.rs
yushi-cli/src/commands/: config.rs  download.rs  queue.rs
yushi-cli/src/tui/: app.rs  mod.rs  theme.rs  ui.rs
yushi-cli/src/tui/widgets/: add_task.rs  dialog.rs  empty_state.rs  filter_tabs.rs  help_bar.rs  history_card.rs  settings_group.rs  sidebar.rs  task_card.rs
yushi-core/: Cargo.toml
yushi-core/src/: bt.rs  config.rs  downloader.rs  error.rs  history.rs  lib.rs  state.rs  storage.rs  types.rs
