[workspace]
resolver = "3"
members = [".", "yushi-cli", "yushi-core"]

[workspace.package]
authors = ["tangxiangong <tangxiangong@gmail.com>"]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = "1"
dirs = "6"
fs-err = { version = "3.2", features = ["debug_tokio", "tokio"] }
futures = "0.3"
hex = "0.4"
md-5 = "0.11"
reqwest = { version = "0.13", features = ["stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
thiserror = "2"
tokio = { version = "1", features = ["fs", "rt", "rt-multi-thread", "signal"] }
uuid = { version = "1", features = ["v4"] }
yushi-core = { path = "yushi-core" }

[package]
name = "yushi"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
gpui = { git = "https://github.com/zed-industries/zed", package = "gpui" }
gpui_platform = { git = "https://github.com/zed-industries/zed", package = "gpui_platform" }
gpui-component = { git = "https://github.com/longbridge/gpui-component", package = "gpui-component" }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component", package = "gpui-component-assets" }
tokio = { workspace = true, features = ["macros"] }
tray-icon = "0.21"
yushi-core = { workspace = true }

# Linux-only: GTK for tray icon initialization
[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"

[target.'cfg(target_os = "macos")'.dependencies]
# Pin macOS font stack to avoid core-graphics version skew with gpui/zed-font-kit.
core-text = "=21.0.0"
core-graphics = "=0.24.0"
