[workspace]
resolver = "3"
members = ["hsi-cli", "hsi-core", "src-tauri"]

[workspace.package]
authors = ["tangxiangong <tangxiangong@gmail.com>"]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = "1"
dirs = "6"
fs-err = { version = "3.2", features = ["debug_tokio", "tokio"] }
futures = "0.3"
hex = "0.4"
hsi-core = { path = "hsi-core" }
librqbit = "8"
md-5 = "0.11"
reqwest = { version = "0.13", features = ["stream", "socks"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
thiserror = "2"
tokio = { version = "1", features = ["fs", "rt", "rt-multi-thread", "signal"] }
uuid = { version = "1", features = ["v4"] }

[profile.dev]
opt-level = 1
codegen-units = 16
debug = "limited"
split-debuginfo = "unpacked"
strip = "debuginfo"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
