[package]
name = "hsi"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = { workspace = true }
hsi-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tokio = { workspace = true, features = ["macros"] }

[target.'cfg(target_os = "macos")'.dependencies]
tauri-plugin-nspopover = { git = "https://github.com/freethinkel/tauri-nspopover-plugin.git", version = "4.0.2" }

[target.'cfg(any(target_os = "linux", windows))'.dependencies]
tauri-plugin-positioner = { version = "2.3.1", features = ["tray-icon"] }
